--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Token Key": "Super Secret Unguessable Key Super Secret Unguessable Key Super Secret Unguessable Key",
   "AllowedHosts": "*"
 }
